# pulumi-profile-selector

./: Cargo.toml  LICENSE  README.md  flake.nix  result
src/: config.rs  main.rs  ui.rs
