[package]
name = "pulumi-profile-selector"
version = "0.1.0"
edition = "2024"
description = "Interactive Pulumi profile selector CLI tool"
license = "MIT"

[[bin]]
name = "pulumi-profile-selector"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"